[package]
name = "gpumemuse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
indexmap = "1.8.1"
nvml-wrapper = "0.7.0"
sysinfo = "0.23.12"
users = "0.11.0"

[profile.release]
lto = true
codegen-units = 1
